<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.SplashScreenActivity">

    <LinearLayout
        android:id="@+id/ll_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name_g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_letter_G"
            android:textColor="@color/white"
            android:textSize="60sp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_letter_O"
            android:textColor="@color/white"
            android:textSize="60sp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_letter_S"
            android:textColor="@color/white"
            android:textSize="60sp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name_s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_letter_S"
            android:textColor="@color/white"
            android:textSize="60sp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_letter_I"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:layout_marginStart="2dp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_name_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_letter_P"
            android:textColor="@color/white"
            android:textSize="60sp">

        </androidx.appcompat.widget.AppCompatTextView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_description_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_share_moments"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_app_name"
        app:layout_constraintVertical_bias="0.16"
        android:layout_marginTop="5dp">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_gossip_splash"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_gossip"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_app_description_splash"
        android:layout_marginTop="-200dp">

    </androidx.appcompat.widget.AppCompatImageView>

</androidx.constraintlayout.widget.ConstraintLayout>